[TASK] change language menu to icon on mobile

--- a/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
@@ -157,6 +157,9 @@
               data-bs-toggle="dropdown"
               aria-expanded="false">
               <span class="main-flag-language flag-language">{language.navigationTitle}</span>
+              <span class="main-flag-language-icon flag-language">
+                <t3kit:render.svg src="/typo3conf/ext/t3kit/Resources/Public/assets/Icons/Bootstrap/globe.svg" aria-hidden="true" focusable="false" width="20" height="20"/>
+              </span>
             </a>
           </f:if>
         </f:for>
