--- a/theme/src/css/main/content-elements/site-header.css
+++ b/theme/src/css/main/content-elements/site-header.css
@@ -290,6 +290,18 @@
   position: static;
 }
 
+.ce-site-header__langmenu-wrp.inside .main-flag-language-icon {
+  display: none;
+}
+
+.ce-site-header__langmenu-wrp.outside .main-flag-language-icon {
+  display: block;
+}
+
+.ce-site-header__langmenu-wrp.outside .main-flag-language {
+  display: none;
+}
+
 /* -------------------------------------------------------- */
 /* X-Small devices (portrait phones, less than 576px) xs */
 /* @media (max-width: 575.98px) { ... } */
@@ -322,7 +334,6 @@
 
   .main-navigation-expand-lg .ce-site-header__langmenu-wrp {
     order: 3;
-    width: 100%;
   }
 
   .main-navigation-expand-lg .ce-site-header__main-navigation-search:not(.outside) {
@@ -389,6 +400,10 @@
   .main-navigation-expand-lg .main-navigation__search-btn {
     padding: 0.6rem 1rem;
   }
+
+  .main-navigation-expand-lg .ce-site-header__langmenu-wrp.inside {
+    width: 100%;
+  }
 }
 /* Large devices (desktops, 992px and up) lg */
 @media (min-width: 992px) {
@@ -436,6 +451,14 @@
   .main-navigation-expand-lg .mobile-menu-links-collapse {
     display: block !important;
   }
+
+  .main-navigation-expand-lg .ce-site-header__langmenu-wrp.outside .main-flag-language-icon {
+      display: none;
+  }
+
+  .main-navigation-expand-lg .ce-site-header__langmenu-wrp.outside .main-flag-language {
+      display: block;
+  }
 }
 
 /* -------------------------------------------------------- */
@@ -458,7 +481,6 @@
 
   .main-navigation-expand-xl .ce-site-header__langmenu-wrp {
     order: 3;
-    width: 100%;
   }
 
   .main-navigation-expand-xl .ce-site-header__main-navigation-search:not(.outside) {
@@ -525,6 +547,10 @@
   .main-navigation-expand-xl .main-navigation__search-btn {
     padding: 0.6rem 1rem;
   }
+  
+  .main-navigation-expand-xl .ce-site-header__langmenu-wrp.inside {
+    width: 100%;
+  }
 }
 /* X-Large devices (large desktops, 1200px and up) xl */
 @media (min-width: 1200px) {
@@ -572,6 +598,14 @@
   .main-navigation-expand-xl .mobile-menu-links-collapse {
     display: block !important;
   }
+
+  .main-navigation-expand-xl .ce-site-header__langmenu-wrp.outside .main-flag-language-icon {
+      display: none;
+  }
+
+  .main-navigation-expand-xl .ce-site-header__langmenu-wrp.outside .main-flag-language {
+      display: block;
+  }
 }
 
 /* -------------------------------------------------------- */
@@ -594,7 +628,6 @@
 
   .main-navigation-expand-xxl .ce-site-header__langmenu-wrp {
     order: 3;
-    width: 100%;
   }
 
   .main-navigation-expand-xxl .ce-site-header__main-navigation-search:not(.outside) {
@@ -661,6 +694,10 @@
   .main-navigation-expand-xxl .main-navigation__search-btn {
     padding: 0.6rem 1rem;
   }
+
+  .main-navigation-expand-xxl .ce-site-header__langmenu-wrp.inside {
+    width: 100%;
+  }
 }
 /* XX-Large devices (larger desktops, 1400px and up) xxl */
 @media (min-width: 1400px) {
@@ -707,6 +744,14 @@
 
   .main-navigation-expand-xxl .mobile-menu-links-collapse {
     display: block !important;
+  }
+
+  .main-navigation-expand-xxl .ce-site-header__langmenu-wrp.outside .main-flag-language-icon {
+    display: none;
+  }
+
+  .main-navigation-expand-xxl .ce-site-header__langmenu-wrp.outside .main-flag-language {
+    display: block;
   }
 }
 
@@ -779,7 +824,7 @@
   color: var(--t3-black);
 }
 
-.main-navigation__list.sticky-menu {
+.main-navigation__items-wrp.show .main-navigation__list.sticky-menu {
   max-height: 70vh;
   overflow: auto;
   min-height: 100%;
