--- a/Resources/Public/assets/development/Css/main.css
+++ b/Resources/Public/assets/development/Css/main.css
@@ -8144,7 +8144,8 @@ button.swiper-pagination-bullet{border:none;margin:0;padding:0;box-shadow:none;-
     margin-right: 10px;
   }
 
-  .main-navigation-expand-lg .main-navigation__search-btn {
+  .main-navigation-expand-lg .main-navigation__search-btn,
+  .ce-site-header__top-search-wrp .main-navigation__search-btn {
     padding: 0.6rem 1rem;
   }
 
