[TASK] change name of site-header js file, use inline

--- a/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
@@ -11,7 +11,7 @@
     <f:render partial="Nav/SkipLinks" arguments="{_all}" />
 
     <f:if condition="{flexform.main_nav_dropdown} == big-menu-dropdown">
-      <f:render partial="Js/Advanced-site-header--async" arguments="{_all}" />
+      <f:render partial="Js/Site-header--inline" arguments="{_all}" />
     </f:if>
 
     <f:if condition="{flexform.header_top}">
