[TASK] add awesomplete, changes to css, changes in search templates

--- a/Resources/Private/Extensions/indexed_search/Templates/MainNavigationSearch.html
+++ b/Resources/Private/Extensions/indexed_search/Templates/MainNavigationSearch.html
@@ -1,9 +1,9 @@
-<div class="tx-indexedsearch-searchbox ce-site-header__search-field-content">
+<div class="tx-indexedsearch-searchbox main-navigation__search">
     <f:form pageUid="{settings.targetPid}" method="post" absolute="0" action="search" extensionName="IndexedSearch" pluginName="pi2" controller="Search">
         <div class="input-group d-flex">
             <div class="main-navigation__search-box js__main-navigation__search-box d-flex w-100">
                 <div class="awesomplete d-flex w-100">
-                    <f:form.textfield name="search[sword]" class="header-middle__search-input ce-site-header__search-field-input" />
+                    <f:form.textfield name="search[sword]" class="header-middle__search-input main-navigation__search-input" />
                 </div>
             </div>
             <div class="main-navigation__search-btn-wrp">
