--- a/Resources/Private/Extensions/solr/Templates/Search/MainNavigationSearch.html
+++ b/Resources/Private/Extensions/solr/Templates/Search/MainNavigationSearch.html
@@ -2,29 +2,33 @@
         xmlns:f="http://typo3.org/ns/TYPO3/Fluid/ViewHelpers"
         xmlns:s="http://typo3.org/ns/ApacheSolrForTypo3/Solr/ViewHelpers/"
         data-namespace-typo3-fluid="true">
-<div class="tx-solr-search-form ce-site-header__search-field-content">
+<div class="tx-solr-search-form main-navigation__search">
     <s:searchForm id="main-navigation-tx-solr-search-form-pi-results" additionalFilters="{additionalFilters}" suggestHeader="{s:translate(key:'suggest_header',default:'Top Results')}">
         <div class="input-group d-flex">
-            <f:for each="{existingParameters}" key="name" as="value">
-                <f:form.hidden name="{pluginNamespace}{name}" value="{value}" />
-            </f:for>
+            <div class="main-navigation__search-box js__main-navigation__search-box d-flex w-100">
+                <f:for each="{existingParameters}" key="name" as="value">
+                    <f:form.hidden name="{pluginNamespace}{name}" value="{value}" />
+                </f:for>
 
-            <f:if condition="{addPageAndLanguageId}">
-                <input type="hidden" name="L" value="{languageUid}" />
-                <input type="hidden" name="id" value="{pageUid}" />
-            </f:if>
+                <f:if condition="{addPageAndLanguageId}">
+                    <input type="hidden" name="L" value="{languageUid}" />
+                    <input type="hidden" name="id" value="{pageUid}" />
+                </f:if>
 
-            <input type="text" placeholder="{f:translate(key: 'search.placeholder', extensionName: 'T3kit')}" class="tx-solr-q js-solr-q tx-solr-suggest tx-solr-suggest-focus form-control ce-site-header__search-field-input" name="{pluginNamespace}[q]" value="{q}" data-search="searchSuggest" />
-            <span class="input-group-btn">
-                <button class="btn tx-solr-submit main-navigation__search-btn" type="submit">
-                    <t3kit:render.svg src="/typo3conf/ext/t3kit/Resources/Public/assets/Icons/Bootstrap/search.svg" aria-hidden="true" focusable="false"/>
-                    <f:comment>
-                    <span>
-                        <s:translate key="submit">Search</s:translate>
-                    </span>
-                    </f:comment>
-                </button>
-            </span>
+                <input type="text" placeholder="{f:translate(key: 'search.placeholder', extensionName: 'T3kit')}" class="tx-solr-q js-solr-q tx-solr-suggest tx-solr-suggest-focus form-control main-navigation__search-input" name="{pluginNamespace}[q]" value="{q}" data-search="searchSuggest" />
+            </div>
+            <div class="main-navigation__search-btn-wrp">
+                <span class="input-group-btn">
+                    <button class="btn tx-solr-submit main-navigation__search-btn" type="submit">
+                        <t3kit:render.svg src="/typo3conf/ext/t3kit/Resources/Public/assets/Icons/Bootstrap/search.svg" aria-hidden="true" focusable="false"/>
+                        <f:comment>
+                        <span>
+                            <s:translate key="submit">Search</s:translate>
+                        </span>
+                        </f:comment>
+                    </button>
+                </span>
+            </div>
         </div>
     </s:searchForm>
 </div>
