--- a/Resources/Private/Extensions/solr/Templates/Search/SearchInput.html
+++ b/Resources/Private/Extensions/solr/Templates/Search/SearchInput.html
@@ -2,10 +2,10 @@
         xmlns:f="http://typo3.org/ns/TYPO3/Fluid/ViewHelpers"
         xmlns:s="http://typo3.org/ns/ApacheSolrForTypo3/Solr/ViewHelpers/"
         data-namespace-typo3-fluid="true">
-<div class="tx-solr-search-form header-top__search">
+<div class="tx-solr-search-form search-input">
     <s:searchForm id="main-navigation-tx-solr-search-form-pi-results" additionalFilters="{additionalFilters}" suggestHeader="{s:translate(key:'suggest_header',default:'Top Results')}">
-        <div class="input-group d-flex">
-            <div class="header-top__search-box js__header-top__search-box d-flex w-100">
+        <div class="input-group d-flex search-input__group">
+            <div class="search-input__group-box js__search-input__group-box d-flex w-100">
                 <f:for each="{existingParameters}" key="name" as="value">
                     <f:form.hidden name="{pluginNamespace}{name}" value="{value}" />
                 </f:for>
@@ -15,11 +15,11 @@
                     <input type="hidden" name="id" value="{pageUid}" />
                 </f:if>
 
-                <input type="text" placeholder="{f:translate(key: 'search.placeholder', extensionName: 'T3kit')}" class="tx-solr-q js-solr-q tx-solr-suggest tx-solr-suggest-focus form-control header-top__search-input" name="{pluginNamespace}[q]" value="{q}" data-search="searchSuggest" />
+                <input type="text" placeholder="{f:translate(key: 'search.placeholder', extensionName: 'T3kit')}" class="tx-solr-q js-solr-q tx-solr-suggest tx-solr-suggest-focus form-control search-input__group-input" name="{pluginNamespace}[q]" value="{q}" data-search="searchSuggest" />
             </div>
-            <div class="header-top__search-btn-wrp">
-                <span class="input-group-btn">
-                    <button class="btn tx-solr-submit header-top__search-btn" type="submit">
+            <div class="search-input__group-btn-wrp">
+                <span class="input-group-btn search-input__group-btn">
+                    <button class="btn tx-solr-submit search-input__group-btn-submit" type="submit">
                         <t3kit:render.svg src="/typo3conf/ext/t3kit/Resources/Public/assets/Icons/Bootstrap/search.svg" aria-hidden="true" focusable="false"/>
                         <f:comment>
                         <span>
