--- a/Resources/Public/assets/development/Css/main.css
+++ b/Resources/Public/assets/development/Css/main.css
@@ -8565,8 +8565,7 @@ button.swiper-pagination-bullet{border:none;margin:0;padding:0;box-shadow:none;-
   background-color: var(--t3-search-wrp-bg);
   border-bottom: 1px solid var(--t3-gray-80);
 }
-.main-navigation__search-input,
-.header-top__search-input {
+.search-input__group-input {
   flex-basis: 100%;
   z-index: 1;
   padding: 0 0 0 1rem;
@@ -8594,40 +8593,40 @@ button.swiper-pagination-bullet{border:none;margin:0;padding:0;box-shadow:none;-
 .main-navigation__dropdown-item-parent-link-with-child {
   font-size: calc(var(--t3-ce-header-nav-font-size) + 0.1rem);
 }
-.main-navigation__search-btn {
+.search-input__group-btn-submit {
   color: var(--t3-btn-search-color);
   background-color: var(--t3-btn-search-bg);
   border-color: var(--t3-btn-search-border-color);
 }
-.main-navigation__search-btn:hover {
+.search-input__group-btn-submit:hover {
   color: var(--t3-btn-search-hover-color);
   background-color: var(--t3-btn-search-hover-bg);
   border-color: var(--t3-btn-search-hover-border-color);
 }
-.main-navigation__search-btn:focus,
-.main-navigation__search-btn.focus {
+.search-input__group-btn-submit:focus,
+.search-input__group-btn-submit.focus {
   color: var(--t3-btn-search-hover-color);
   background-color: var(--t3-btn-search-hover-bg);
   border-color: var(--t3-btn-search-hover-border-color);
   box-shadow: 0 0 0 0.2rem hsla(var(--t3-btn-search-bg-hs), var(--t3-btn-search-bg-l), 0.5);
 }
-.main-navigation__search-btn:active,
-.main-navigation__search-btn.active {
+.search-input__group-btn-submit:active,
+.search-input__group-btn-submit.active {
   color: var(--t3-btn-search-active-color);
   background-color: var(--t3-btn-search-active-bg);
   border-color: var(--t3-btn-search-active-border-color);
 }
-.main-navigation__search-btn:active:focus,
-.main-navigation__search-btn.active:focus {
+.search-input__group-btn-submit:active:focus,
+.search-input__group-btn-submit.active:focus {
   box-shadow: 0 0 0 0.2rem hsla(var(--t3-btn-search-bg-hs), var(--t3-btn-search-bg-l), 0.5);
 }
-.main-navigation__search-box .awesomplete,
-.main-navigation__search-box .awesomplete input {
+.search-input__group-box .awesomplete,
+.search-input__group-box .awesomplete input {
   flex-basis: 100%;
   display: flex;
   position: relative;
 }
-.main-navigation__search-box .awesomplete ul {
+.search-input__group-box .awesomplete ul {
   position: absolute;
   top: 100%;
   background: var(--t3-white);
@@ -8636,7 +8635,7 @@ button.swiper-pagination-bullet{border:none;margin:0;padding:0;box-shadow:none;-
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.main-navigation__search-box .awesomplete ul li {
+.search-input__group-box .awesomplete ul li {
   padding-top: 0.5rem;
 }
 .header-top__search-btn {
@@ -8746,7 +8745,7 @@ button.swiper-pagination-bullet{border:none;margin:0;padding:0;box-shadow:none;-
   order: 3;
   margin-right: 10px;
 }
-.main-navigation__search-btn,
+.search-input__group-btn-submit,
 .ce-site-header__top-search-wrp .header-top__search-btn {
   padding: 0.6rem 1rem;
 }
@@ -8827,12 +8826,12 @@ button.swiper-pagination-bullet{border:none;margin:0;padding:0;box-shadow:none;-
 
   .main-navigation-expand-lg .main-navigation__items-wrp.inside .main-navigation__list,
   .main-navigation-expand-lg .main-navigation-toggler-left .main-navigation__items-wrp,
-  .main-navigation-expand-lg .ce-site-header__langmenu-wrp,
   .main-navigation-expand-lg .main-navigation-toggler-left .ce-site-header__langmenu-wrp.outside,
   .main-navigation-expand-lg .main-navigation-toggler-left .main-navigation__logo,
   .main-navigation-expand-lg .main-navigation-toggler-right .main-navigation-toggler,
   .main-navigation-expand-lg .main-navigation-toggler-right .main-navigation__items-wrp,
-  .main-navigation-expand-lg .main-navigation-toggler-right .ce-site-header__langmenu-wrp.outside {
+  .main-navigation-expand-lg .main-navigation-toggler-right .ce-site-header__langmenu-wrp.outside,
+  .main-navigation-expand-lg .ce-site-header__langmenu-wrp {
     order: unset;
     width: auto;
   }
