--- a/Resources/Private/Extensions/indexed_search/Templates/SearchInput.html
+++ b/Resources/Private/Extensions/indexed_search/Templates/SearchInput.html
@@ -1,6 +1,6 @@
 <div class="tx-indexedsearch-searchbox search-input">
     <f:form pageUid="{settings.targetPid}" method="post" absolute="0" action="search" extensionName="IndexedSearch" pluginName="pi2" controller="Search">
-        <div class="input-group d-flex">
+        <div class="input-group d-flex search-input__group">
             <div class="search-input__group-box js__search-input__group-box d-flex w-100">
                 <div class="awesomplete d-flex w-100">
                     <f:form.textfield name="search[sword]" class="search-input__group-input" />
