[TASK] comment out searchInput for indexed search template

--- a/Resources/Private/Extensions/indexed_search/Templates/SearchInput.html
+++ b/Resources/Private/Extensions/indexed_search/Templates/SearchInput.html
@@ -1,3 +1,4 @@
+<f:comment>
 <div class="tx-indexedsearch-searchbox search-input">
     <f:form pageUid="{settings.targetPid}" method="post" absolute="0" action="search" extensionName="IndexedSearch" pluginName="pi2" controller="Search">
         <div class="input-group d-flex search-input__group">
@@ -14,3 +15,4 @@
         </div>
     </f:form>
 </div>
+</f:comment>
