--- a/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
@@ -158,7 +158,7 @@
     </a>
     <div class="ce-site-header__search-field-wrp collapse search-collapse" id="search__main-navigation-search" aria-labelledby="search-toggle-btn">
         <div class="ce-site-header__search-field {f:if(condition: flexform.main_nav_full_width, then: ' container-fluid', else: ' container')}">
-          <f:cObject typoscriptObjectPath="lib.contentObject.searchInput.20" />
+          <f:cObject typoscriptObjectPath="lib.contentObject.searchForm.20" />
         </div>
     </div>
   </div>
@@ -173,7 +173,7 @@
     </a>
     <div class="ce-site-header__search-field-wrp collapse search-collapse" id="search__main-navigation-search" aria-labelledby="search-toggle-btn">
         <div class="ce-site-header__search-field {f:if(condition: flexform.main_nav_full_width, then: ' container-fluid', else: ' container')}">
-          <f:cObject typoscriptObjectPath="lib.contentObject.searchInput.20" />
+          <f:cObject typoscriptObjectPath="lib.contentObject.searchForm.20" />
         </div>
     </div>
   </div>
