[FEATURE] add 2 columns grid CE

--- a/Resources/Public/CSS/BE/content-elements-preview.css
+++ b/Resources/Public/CSS/BE/content-elements-preview.css
@@ -66,6 +66,10 @@
   background: #42895417;
 }
 
+.t3kit-ce-footer--grid {
+  background: #19c8ca17;
+}
+
 .t3kit-preview-wrp img {
   background: #e8e8e8;
   padding: 4px;
