--- a/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
@@ -157,7 +157,10 @@
       <ul class="ce-site-footer__links-list">
         <f:for each="{links}" as="linkItem">
           <li class="ce-site-footer__links-list-item {navItem.data.uid} {f:if(condition: navItem.active, then:' active')}">
-            <a href="{linkItem.link}" class="ce-site-footer__links-list-item-link ce-site-footer__link">
+            <a href="{linkItem.link}"
+            class="ce-site-footer__links-list-item-link ce-site-footer__link {f:if(condition: linkItem.target,then: ' target-blank-link')}"
+            {f:if(condition: linkItem.target, then: 'rel="noreferrer"' )}
+            {f:if(condition: linkItem.target, then: 'target="_blank"')}>
                 <f:render section="linkTitle" arguments="{item: linkItem, flexform: flexform}" />
             </a>
           </li>
@@ -185,8 +188,24 @@
         loading="lazy" />
     </div>
   </f:if>
+  <f:if condition="{item.target}">
+    <f:then>
+      <span class="ce-site-footer__links-list-item-title">{item.title}</span>
+      <span class="target-blank-link__msg">
+        <f:translate key="target_blank" extensionName="t3kit" />
+      </span>
+      <span class="target-blank-link__icon-wrp">
+        <svg class="target-blank-link__icon" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+          <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h8a1.5 1.5 0 001.5-1.5V9a.5.5 0 00-1 0v4a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V5a.5.5 0 01.5-.5h4a.5.5 0 000-1H3A1.5 1.5 0 001.5 5v8zm7-11a.5.5 0 01.5-.5h5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V2.5H9a.5.5 0 01-.5-.5z" clip-rule="evenodd"/>
+          <path fill-rule="evenodd" d="M14.354 1.646a.5.5 0 010 .708l-8 8a.5.5 0 01-.708-.708l8-8a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+        </svg>
+      </span>
+    </f:then>
 
-  <span class="ce-site-footer__links-list-item-title">{item.title}</span>
+    <f:else>
+      <span class="ce-site-footer__links-list-item-title">{item.title}</span>
+    </f:else>
+  </f:if>
 </f:section>
 
 </html>
